# AuthServer

./: .gitignore  CMakeLists.txt  build.sh
cmake/: GitRevision.cmake  options.cmake  showoptions.cmake
cmake/macros/: FindMySQL.cmake
dep/: CMakeLists.txt
src/: CMakeLists.txt
src/Framework/: CMakeLists.txt  Common.h
src/Framework/Auth/: AuthCrypt.cpp  HMACSHA1.cpp  SRP6.cpp  SRP6.h
src/Framework/BackgroundTask/Service/: ServiceWin32.cpp
src/Framework/ByteBuffer/: ByteBuffer.h
src/Framework/Config/: Config.cpp  Config.h
src/Framework/Database/: Database.cpp  Database.h  DatabaseEnv.h  DatabaseMysql.cpp  DatabaseMysql.h  QueryResult.h  QueryResultMysql.cpp  QueryResultMysql.h  QueryResultPostgre.cpp  SQLStorageImpl.h  SqlDelayThread.h  SqlPreparedStatement.cpp  SqlPreparedStatement.h
src/Framework/Log/: Log.cpp  Log.h
src/Framework/Network/: Listener.cpp  NetworkThread.hpp  Socket.cpp  Socket.hpp
src/Framework/Platform/: Define.h
src/Framework/Threading/: Threading.cpp
src/Framework/Utilities/: TSS.h  Util.cpp  Util.h
src/Main/: AuthCodes.h  AuthServer.conf.dist.in  AuthServer.rc  AuthSocket.cpp  AuthSocket.h  AuthSocketGuiHandlers.cpp  CMakeLists.txt  GlobalDefinitions.h  Main.cpp  RealmList.cpp  revision.h  revision.h.in
src/RealmListMgr/: CMakeLists.txt  RealmListDef.h  RealmListMgr.cpp  RealmListMgr.h  RegOpcodes.h  RegSocket.cpp  RegSocket.h  ServerComMsgHandler.cpp  SrvComOpcodes.h  SrvComSocket.cpp  SrvComSocket.h  TimedRingBuffer.h
